<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/title_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_message"
            android:textSize="@dimen/hugu_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/title_image_info"
            android:src="@drawable/titleimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/title_btn_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_button_message"
            app:layout_constraintBottom_toBottomOf="@+id/title_image"
            app:layout_constraintEnd_toEndOf="@+id/title_image"
            app:layout_constraintStart_toStartOf="@+id/title_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />

        <TextView
            android:id="@+id/high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:text="@string/hign_score_message"
            app:layout_constraintBottom_toTopOf="@+id/title_message"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>